--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El secreto de la calabaza magica -->
+<li>
+  <a href="../Peliculas/pelicula610.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/ubp2WXUMFaEUBdZTEg0aRgSvZDG.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El secreto de la calabaza mágica 2007</span>
+    <span class="hidden">Cuando el escolar Wang Bao descubre una calabaza mágica que puede concederle todos sus deseos al instante, el torpe niño se convierte de repente en un héroe entre sus curiosos compañeros de clase. Cuando la calabaza resulta ser más una carga que una bendición y el niño decide deshacerse de ella, pronto descubre que es más fácil decirlo que hacerlo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Demon Slayer: Kimetsu no Yaiba -Entrenamiento con los Hashira- -->
 <li>
   <a href="../Peliculas/pelicula609.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
