--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El secreto de la calabaza magica -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Bienvenidos al Club -->
+<li>
+  <a href="../Peliculas/pelicula611.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/sj3PGomvhxTpBdbnTwenKd8SSUO.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Bienvenidos al Club 2022</span>
+    <span class="hidden">Es el Día de Disney+ y Lisa Simpson está decidida a transformarse en una princesa. Después de conocer a algunos de los villanos más notables de Disney, Lisa se sorprende al aprender que ser mala podría ser más divertido.</span>
+  </a>
+</li>
+<!--FIN--><!-- El secreto de la calabaza magica -->
 <li>
   <a href="../Peliculas/pelicula610.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
