--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -73,7 +73,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El secreto de la calabaza magica -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: El Bueno, El Bart Y El Loki -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula613.html">
+    <img src="https://image.tmdb.org/t/p/original/u10ZfFwbCMB4UrFy7OlHq08fBRr.jpg" alt="Los Simpson: El Bueno, El Bart Y El Loki" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson: El Bueno, El Bart Y El Loki</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- El secreto de la calabaza magica -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula610.html">
     <img src="https://image.tmdb.org/t/p/original/ubp2WXUMFaEUBdZTEg0aRgSvZDG.jpg" alt="El secreto de la calabaza mágica" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
