--- a/Plataforma/disney/index.html
+++ b/Plataforma/disney/index.html
@@ -183,7 +183,17 @@ document.addEventListener("DOMContentLoaded", () => {
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson en Plusniversario -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: El Bueno, El Bart Y El Loki -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="https://lz.blogdepelis.lat/Peliculas/pelicula613.html">
+    <img src="https://image.tmdb.org/t/p/original/u10ZfFwbCMB4UrFy7OlHq08fBRr.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson: El Bueno, El Bart Y El Loki</div>
+  <div class="text-xs text-white/70">2021</div>
+</article><!-- Los Simpson en Plusniversario -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="https://lz.blogdepelis.lat/Peliculas/pelicula612.html">
     <img src="https://image.tmdb.org/t/p/original/y48Hg3jyL0TljAlRdSa0AX2PbcQ.jpg" alt="poster" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105" loading="lazy"/>
