--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -40,7 +40,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: El Bueno, El Bart Y El Loki -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: La pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula616.html">
+    <img src="https://image.tmdb.org/t/p/original/d9wHkwF9ttnNKuOoEIStve32jEk.jpg" alt="Los Simpson: La película" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson: La película</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Los Simpson: El Bueno, El Bart Y El Loki -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula613.html">
     <img src="https://image.tmdb.org/t/p/original/u10ZfFwbCMB4UrFy7OlHq08fBRr.jpg" alt="Los Simpson: El Bueno, El Bart Y El Loki" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
