--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Cruzada -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Simpson: La pelicula -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula616.html">
+    <img src="https://image.tmdb.org/t/p/original/d9wHkwF9ttnNKuOoEIStve32jEk.jpg" alt="Los Simpson: La película" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Simpson: La película</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Cruzada -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula615.html">
     <img src="https://image.tmdb.org/t/p/original/9RAdZn1pfRkeVSDwngvIQKsZd2Z.jpg" alt="Cruzada" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
