--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Heart Eyes -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Star Trek: Seccion 31 -->
+<li>
+  <a href="../Peliculas/pelicula618.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/bx9btF0Jo4rRF68xny7VPqHNt3z.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Star Trek: Sección 31 2025</span>
+    <span class="hidden">En Star Trek: Sección 31, la Emperadora Philippa Georgiou, se une a una división secreta de la Flota Estelar encargada de proteger a la Federación Unida de Planetas y se enfrenta a los pecados de su pasado.</span>
+  </a>
+</li>
+<!--FIN--><!-- Heart Eyes -->
 <li>
   <a href="../Peliculas/pelicula617.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
