--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El abismo secreto -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El aro 2 -->
+<li>
+  <a href="../Peliculas/pelicula620.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/atARS3tVYd8rQMxKS7POErIZGCK.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El aro 2 2005</span>
+    <span class="hidden">Seis meses después de los incidentes relacionados con una cinta de vídeo donde se aprecia la muerte de una joven a manos de sus padres, Rachel Keller decide mudarse con su hijo de Seattle a un lugar donde puedan sentirse más seguros y empezar una nueva vida. La cinta de vídeo un tanto siniestra que acabó misteriosamente con la vida de un niño no deja de preocupar a Rachel, que decide emprender una investigación sobre todos aquellos que desaparecieron y saber qué tipo de maldición esconde la cinta.</span>
+  </a>
+</li>
+<!--FIN--><!-- El abismo secreto -->
 <li>
   <a href="../Peliculas/pelicula619.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
