--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El aro 2 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Viernes negro -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula621.html">
+    <img src="https://image.tmdb.org/t/p/original/aUBw4YOmew5lwsAqbOJ9CG7tmDN.jpg" alt="Viernes negro" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Viernes negro</div>
+  <div class="text-xs text-white/70">2023</div>
+</article><!-- El aro 2 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula620.html">
     <img src="https://image.tmdb.org/t/p/original/atARS3tVYd8rQMxKS7POErIZGCK.jpg" alt="El aro 2" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
