--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El aro 2 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Viernes negro -->
+<li>
+  <a href="../Peliculas/pelicula621.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/aUBw4YOmew5lwsAqbOJ9CG7tmDN.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Viernes negro 2023</span>
+    <span class="hidden">Después de que un disturbio termina en tragedia en el Viernes Negro, un misterioso asesino inspirado en el Día de Acción de Gracias aterroriza Plymouth Massachusetts – el lugar donde nació esa festividad (norteamericana).</span>
+  </a>
+</li>
+<!--FIN--><!-- El aro 2 -->
 <li>
   <a href="../Peliculas/pelicula620.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
