--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -72,7 +72,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Star Trek: Seccion 31 -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Zootopia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/pelicula622.html">
+    <img src="https://image.tmdb.org/t/p/original/i3WnZpJkQYXXbSGplEGmyoyeskM.jpg" alt="Zootopia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Zootopia</div>
+  <div class="text-xs text-white/70">2016</div>
+</article><!-- Star Trek: Seccion 31 -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/pelicula618.html">
     <img src="https://image.tmdb.org/t/p/original/bx9btF0Jo4rRF68xny7VPqHNt3z.jpg" alt="Star Trek: Sección 31" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
