--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,13 +156,22 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mickey 17 -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Diamante de Sangre -->
+<li>
+  <a href="../Peliculas/pelicula624.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/dBuTvhQgbsoWEOGh50Bkf5qB58g.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Diamante de Sangre 2006</span>
+    <span class="hidden">Un pescador, un contrabandista y un sindicato de empresarios coinciden en la posesión de un diamante de valor incalculable.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mickey 17 -->
 <li>
   <a href="../Peliculas/pelicula623.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
   src="https://image.tmdb.org/t/p/original/bgQt8SRHYxMPUF5M0VzE9Lp34W9.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
     <span class="hidden">Mickey 17 2025</span>
-    <span class="hidden">Mickey Barnes se encuentra en la extraordinaria circunstancia de trabajar para un empleador que exige el compromiso máximo con el trabajo… morir, para ganarse la vida.</span>
+    <span class="hidden">Mickey Barnes se encuentra en la extraordinaria circunstancia de trabajar para un empleador que exige el compromiso máximo con el trabajo⬦ morir, para ganarse la vida.</span>
   </a>
 </li>
 <!--FIN--><!-- Zootopia -->
