--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Novocaine sin dolor -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- El ladron de joyas -->
+<li>
+  <a href="../Peliculas/pelicula626.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/hzuus3qrQct2JeoAs2AGMYzKzjZ.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">El ladrón de joyas 2025</span>
+    <span class="hidden">En esta batalla campal de astucia y precisión, un hábil estafador idea un robo de diamantes e intenta burlar a su sádico adversario.</span>
+  </a>
+</li>
+<!--FIN--><!-- Novocaine sin dolor -->
 <li>
   <a href="../Peliculas/pelicula625.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
