--- a/SEARCH/index.html
+++ b/SEARCH/index.html
@@ -156,7 +156,16 @@ document.addEventListener("DOMContentLoaded", () => {
 <div id="estadoBusqueda" class="text-center text-sm text-[#bbbbbb] mt-6 hidden"></div> <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
     <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
 
-      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Amigos De Armas -->
+      <!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Yo, Robot -->
+<li>
+  <a href="../Peliculas/pelicula629.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/u0tUxQQxrbKX3GIfsCYeHrrYPzV.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Yo, Robot 2004</span>
+    <span class="hidden">Chicago, año 2035. Vivimos en completa armonía con robots inteligentes. Cocinan para nosotros, conducen nuestros aviones, cuidan de nuestros hijos y confiamos plenamente en ellos debido a que se rigen por las Tres Leyes de la Robótica que nos protegen de cualquier daño. Inesperadamente un robot se ve implicado en el crimen de un brillante científico y el detective Del Spooner queda a cargo de la investigación.</span>
+  </a>
+</li>
+<!--FIN--><!-- Amigos De Armas -->
 <li>
   <a href="../Peliculas/pelicula628.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
